# ads_auction

./: .coverage  .gitignore  .pre-commit-config.yaml  ALGORITHM_RATIONALE.md  DESIGN_DECISIONS.md  QUALITY_ASSESSMENT.md  README.md  RESULTS_EXPLANATION.md  TECHNICAL_REPORT.md  coverage.xml  pyproject.toml  requirements-dev.txt  setup_kaggle_credentials.py
.github/workflows/: ci.yml
demo/: README.md  SETUP.md  __init__.py  api_integration.py  auction.py  campaign_simulator.py  config.py  cuped.py  data_processing.py  did.py  eda_kaggle_datasets.py  experimentation.py  ghost_bidding.py  incrementality.py  kaggle_integration.py  main.py  off_policy.py  psm.py  requirements.txt  run_with_kaggle.py  tree_causal.py  uplift_models.py
demo/results/: results.txt
docs/: CITATIONS.md  DATA_EXPLANATION.md  DESIGN_DECISIONS.md  QUALITY_ASSESSMENT.md  README.md
tests/: __init__.py  conftest.py  test_cuped.py  test_incrementality.py  test_integration.py  test_tree_causal.py
